--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,7 @@
     <script src="./static/lib/js/leaflet.js"></script>
     <script src="./static/lib/js/leaflet-heat.js"></script>
     <script src="./static/lib/js/keen.min.js"></script>
-    <script src='./static/js/clusterPCAVis.js' type='text/javascript'></script>
+    <!-- <script src='./static/js/clusterPCAVis.js' type='text/javascript'></script>
     <script src='./static/js/clusterSimpleStatVis.js' type='text/javascript'></script>
     <script src='./static/js/clusterReport.js' type='text/javascript'></script>
     <script src='./static/js/hourlyHeatmap.js' type='text/javascript'></script>
@@ -172,7 +172,7 @@
     <script src='./static/js/groupDistributionVis.js' type='text/javascript'></script>
     <script src='./static/js/bostonMap.js' type='text/javascript'></script>
     <script src='./static/js/main.js' type='text/javascript'></script>
-    <script src='./static/js/app.js' type='text/javascript'></script>
+    <script src='./static/js/app.js' type='text/javascript'></script> -->
 </body>
 
 </html>
